# midside-eq-audio-plugin

./: .gitignore  CMakeLists.txt  README.md
plugin/: CMakeLists.txt
plugin/include/: CtmLookAndFeel.h  CtmSlider.h  CtmToggle.h  HighPassFilter.h  LowPassFilter.h  ParameterControl.h  ParameterControls.h  ParameterListener.h  PeakFilter.h  PluginEditor.h  PluginProcessor.h  SliderLabel.h
plugin/include/filters/: CtmFilter.h  GainFilter.h  HighPassFilter.h  LowPassFilter.h  ParameterBlueprint.h  PeakFilter.h
plugin/include/parameterControls/: FilterControl.h  GainControl.h  HighPassControl.h  Linkable.h  LowPassControl.h  ParameterControl.h  ParameterListener.h  ParameterToggle.h  PeakFilterControl.h
plugin/include/ui/: CtmLookAndFeel.h  CtmToggle.h  EqVisual.h  FilterStateListener.h  Icon.h  SliderLabel.h
plugin/source/: CtmLookAndFeel.cpp  CtmSlider.cpp  CtmToggle.cpp  HighPassFilter.cpp  LowPassFilter.cpp  ParameterControls.cpp  ParameterListener.cpp  PeakFilter.cpp  PluginEditor.cpp  PluginProcessor.cpp  SliderLabel.cpp
plugin/source/filters/: CtmFilter.cpp  GainFilter.cpp  HighPassFilter.cpp  LowPassFilter.cpp  ParameterBlueprint.cpp  PeakFilter.cpp
plugin/source/parameterControls/: GainControl.cpp  HighPassControl.cpp  LowPassControl.cpp  ParameterControl.cpp  ParameterListener.cpp  ParameterToggle.cpp  PeakFilterControl.cpp
plugin/source/ui/: CtmLookAndFeel.cpp  CtmToggle.cpp  EqVisual.cpp  Icon.cpp  SliderLabel.cpp
